--- a/index.html
+++ b/index.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>projeto Marcela</title>
 </head>
+
 <body>
-    <header>melhores musicas Lana Del Rey</header>
+    <header>filmes de comedia romantica</header>
+    <section>
+        <div>
+            <h1>filme a proposta</h1>
+            <p>Margaret Tate é uma editora de livros que corre o risco de ser deportada para o Canadá, seu país natal. Para continuar em Nova York, diz estar noiva de Andrew, seu assistente. 
+            O jovem aceita ajudá-la, mas impõe algumas condições, entre elas ir para o Alasca e conhecer sua família excêntrica. Com um oficial da imigração sempre à espreita.
+            Margaret e Andrew têm que seguir o plano de casamento apesar de diversos problemas.
+    </p>
 
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/Bag1gUxuU0g?si=aB7v80uym5MnBHId" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
+
+
+
+
+    
+        </div>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/oi3nJ5uryfs?si=gveB0ySAHnu0XZYA"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    picture-in-picture; web-share"
+    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </section>
 </body>
+
 </html>
