--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 
 <head>
+    <link rel="styleheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>projeto Marcela</title>
@@ -14,19 +15,10 @@
             <h1>filme a proposta</h1>
             <p>Margaret Tate é uma editora de livros que corre o risco de ser deportada para o Canadá, seu país natal. Para continuar em Nova York, diz estar noiva de Andrew, seu assistente. 
             O jovem aceita ajudá-la, mas impõe algumas condições, entre elas ir para o Alasca e conhecer sua família excêntrica. Com um oficial da imigração sempre à espreita.
-            Margaret e Andrew têm que seguir o plano de casamento apesar de diversos problemas.
-    </p>
-
-
-
-
-
-
-
-    
+            Margaret e Andrew têm que seguir o plano de casamento apesar de diversos problemas.    
         </div>
-
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/oi3nJ5uryfs?si=gveB0ySAHnu0XZYA"
+        <div class="texto-video1"
+        iframe width="560" height="315" src="https://www.youtube.com/embed/oi3nJ5uryfs?si=gveB0ySAHnu0XZYA"
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
