--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
     picture-in-picture; web-share"
     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>
+
+<h2>filmes comedia romantica</h2>
+<div class="categoria-videos">
+    <a href="https://img.youtube.com/vi/https://youtu.be/c1ROrNQITRw?si=Hz2SvGFXxyxT2kAe/maxresdefault.jpg">
+    <img src="https://img.youtube.com/vi/c1ROrNQITRw/maxresdefault.jpg"/>
+</a>
+
+</div>
+<section>
+
+
 </body>
 
 </html>
